name:               auth-helper
version:            1.0.0
build-type:         Simple
cabal-version:      >= 1.20
license:            MIT
copyright:          Copyright © 2015 Miëtek Bak
author:             Miëtek Bak <hello@mietek.io>
maintainer:         Miëtek Bak <hello@mietek.io>
stability:          experimental
homepage:           https://github.com/mietek/auth-helper
license-file:       LICENSE.md
extra-source-files: README.md
category:           Development, Web, Service
synopsis:           TODO
description:        TODO

executable auth-helper
  main-is:            Main.hs
  default-language:   Haskell2010
  default-extensions: DataKinds,
                      DeriveGeneric,
                      OverloadedStrings,
                      TypeFamilies,
                      TypeOperators
  ghc-options:        -O2 -Wall -threaded
  build-depends:      base,
                      aeson,
                      bytestring,
                      directory,
                      http-types,
                      servant,
                      servant-server,
                      stm,
                      text,
                      transformers,
                      wai,
                      warp,
                      warp-tls
